--- a/app.component.html
+++ b/app.component.html
@@ -4,10 +4,28 @@
 
   <app-hello-world></app-hello-world>
   <br>
-  <app-user-item></app-user-item>
+  
   <br>
   <app-user-list></app-user-list>
   <br>
   <app-about-us></app-about-us>
   <br>
   <app-contact-us></app-contact-us>
+  <br>
+  <app-user-model></app-user-model>
+  <br>
+  <!--
+  <app-prop-bind></app-prop-bind>
+  <br>-->
+  <app-event-eg></app-event-eg>
+  <br>
+  <app-user-manager></app-user-manager>
+  <br>
+  <br>
+  <app-people-list></app-people-list>
+  <br>
+  <app-people-list2></app-people-list2>
+  <br>
+  <app-two-way></app-two-way>
+  <br>
+  <app-emp-data></app-emp-data>
